2008-09-06  Sean Swehla <smswehla@linux.vnet.ibm.com>
	* TEST/v2_testein.c
	Fixed 2102345: missing configuration of CIM-HOST-PORT in sblim-sfcc
	(patch by Pavol Rusnak)

2008-09-06  Sean Swehla <smswehla@linux.vnet.ibm.com>
	* TEST/print-types.c, backend/cimxml/constClass.c,
	backend/cimxml/indicationlistener.c, backend/cimxml/instance.c
	Fixed 2102339: Missing ret values in sblim-sfcc
	(patch by Pavol Rusnak)

2008-06-16  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
    * frontend/sfcc/sfcclient.c
    Better handling of NULL values for slp.

2008-05-16  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * cimc/cimcclient.c
    Check for valid connection type and return rc=3 and a message
    if incorrect.

    * TEST/v2test_gc.c
    Test valid handling of above, and check rc on existing tests

2008-05-01  Chris Buccella <buccella@linux.vnet.ibm.com>

	* backend/cimxml/client.c, backend/cimxml/property.c, 
	backend/cimxml/qualifier.c, backend/cimxml/string.c:
	Made changes to quiet some gcc warnings

	* Makfile.am:
	Additions needed for large volume support feature

	* TEST/Makefile.am:
	Additions needed for new test_ programs

	* configure.ac:
	Bumped version number to 2.1.0

2008-04-23  Chris Buccella <buccella@linux.vnet.ibm.com>

	* backend/cimxml/client.c:
	Fixed 1940546: Memory corruption in AsciiToXmlStr()
	(patch by Shashi Uli)

2008-04-22 Gary Readler <gdr@us.ibm.com>
	* README TEST/Makefile.am TEST/v2test_ec.c TEST/v2test_ecn.c
	TEST/v2test_ei.c TEST/v2test_ein.c TEST/v2test_gc.c
	updated README and added some v2 interface testcases  

2008-02-05  Sven Schuetz <sven@de.ibm.com>

	* configure.ac, Makefile.am, backend/cimxml/cimXmlResp.y:
	Fixed 1887125: cleanup due to new parser

2008-01-16  Sven Schuetz <sven@de.ibm.com>

	* configure.ac, Makefile.am, backend/cimxml/grammar.c,
	backend/cimxml/client.c, backend/cimxml/cimXmlParser.c,
	backend/cimxml/nativeCimXml.h, backend/cimxml/indicationlistener.c: