@@ -5,6 +5,8 @@ Changes since 2.1
 Bugs:
 - 2102339: Missing ret values in sblim-sfcc
 - 2102345: missing configuration of CIM-HOST-PORT in sblim-sfcc
+- 2158091: sfcb modules belong in private dir
+
 
 Changes in 2.1
 ==============
