@@ -1,3 +1,7 @@
+2008-10-23  Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+	* Makefile.am configure.ac cimc/cimcclient.c
+	Fixed 2158091: sfcb modules belong in private dir
+
 2008-09-06  Sean Swehla <smswehla@linux.vnet.ibm.com>
 	* TEST/v2_testein.c
 	Fixed 2102345: missing configuration of CIM-HOST-PORT in sblim-sfcc
